name:                sub-maude
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              ncaq
maintainer:          ncaq@ncaq.net
copyright:           © ncaq
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Application
  build-depends:       base >= 4.7 && < 5
                     , classy-prelude
                     , groom
                     , parsec
                     , transformers
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings

executable sub-maude
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sub-maude
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sub-maude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
